@@ -1,5 +1,6 @@
 {{$NEXT}}
     Add LWP::Protocol::https as dependency.
+    Use HTTP::Online to test for internet connection when running tests.
 
 1.120730  2012-03-13 12:41:33 Europe/London
     Need at least Net::Ping 2.33 for testing.
